<?xml version="1.0"?>
<package format="2">
  <name>b2_rplidar</name>
  <version>0.1.0</version>

  <description>B2 IMU pacakge.</description>
  <author email="sheaffej@gmail.com">John Sheaffer</author>
  <maintainer email="sheaffej@gmail.com">John Sheaffer</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <exec_depend>xacro</exec_depend>

</package>
